# OmixForge-plugins

./: Makefile  README.md  calc.py  charts_plugin.py  check_plugins.py  hello.py  pyproject.toml  tab_plugin.py
.github/workflows/: makefile.yml
