[project]
name = "plugins"
version = "0.1.0"
description = ""
authors = [
    {name = "mohdsinanm",email = "mohamedysf@bicpu.edu.in"}
]
readme = "README.md"
requires-python = ">=3.13,<=3.14"
dependencies = [
    "pytest (>=8.4.1,<9.0.0)",
    "pyqt6 (>=6.7.0,<7.0.0)",
    "pyinstaller (>=6.14.1,<7.0.0)",
    "nf-core (>=3.3.2,<4.0.0)",
    "polars (>=1.33.1,<2.0.0)",
    "pyqtwaitingspinner (>=1.3.2,<2.0.0)",
    "pytest-qt (>=4.5.0,<5.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "numpy (>=2.4.0,<3.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "biopython (>=1.86,<2.0)",
    "pandas (>=2.3.3,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
